--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "framer-motion": "^12.23.12",
     "i18next": "^25.5.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
@@ -18,6 +19,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-i18next": "^15.7.3",
+    "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
