--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "next": "15.5.2",
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
+    "react-countup": "^6.5.3",
     "react-dom": "19.1.0",
     "react-i18next": "^15.7.3",
     "react-icons": "^5.5.0",
