--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "i18next": "^25.5.0",
     "jspdf": "^3.0.2",
     "lucide-react": "^0.542.0",
-    "next": "15.5.2",
+    "next": "^15.5.9",
     "next-i18next": "^15.4.2",
     "react": "19.1.0",
     "react-countup": "^6.5.3",
